Add division services, contact forms, company profile and clients section

--- a/frontend/electromechanical.html
+++ b/frontend/electromechanical.html
@@ -23,14 +23,51 @@
       for industrial, commercial, and government projects.
     </p>
 
-    <h3>What We Do</h3>
-    <ul>
-      <li>Electrical installation (medium & low voltage)</li>
-      <li>HVAC installation and maintenance</li>
-      <li>Industrial mechanical systems</li>
-      <li>Power distribution & control panels</li>
-      <li>Preventive & corrective maintenance</li>
-    </ul>
+    <h3>Our Core Services</h3>
+
+<div class="apps-grid">
+
+  <div class="app-card">
+    <h4>Electrical Installation</h4>
+    <p>
+      Medium & low voltage electrical installation for
+      industrial, commercial, and government facilities.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>HVAC Systems</h4>
+    <p>
+      Design, installation, and maintenance of HVAC systems
+      ensuring comfort, efficiency, and reliability.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Industrial Mechanical Works</h4>
+    <p>
+      Mechanical installation for factories, plants,
+      and industrial infrastructure.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Power Distribution</h4>
+    <p>
+      Electrical panels, power control systems,
+      and safe energy distribution.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Maintenance Services</h4>
+    <p>
+      Preventive and corrective maintenance to
+      ensure system longevity and safety.
+    </p>
+  </div>
+
+</div>
 
     <h3>Who We Serve</h3>
     <p>
@@ -43,6 +80,26 @@
     </a>
   </div>
 </section>
+
+<section class="contact-section">
+  <h2>Request Electromechanical Services</h2>
+
+  <form id="contact-form" class="contact-form">
+    <input type="hidden" name="division" value="Electromechanical">
+
+    <label>Name</label>
+    <input type="text" required>
+
+    <label>Email</label>
+    <input type="email" required>
+
+    <label>Project Details</label>
+    <textarea required></textarea>
+
+    <button type="submit">Submit Request</button>
+  </form>
+</section>
+
 
 </body>
 </html>
