--- a/frontend/index.html
+++ b/frontend/index.html
@@ -303,6 +303,21 @@
   </form>
 </section>
 
+<section class="section">
+  <div class="container">
+    <h2>Clients & Partners</h2>
+    <p class="lede">
+      Trusted by institutions, enterprises, and industry leaders.
+    </p>
+
+    <div class="apps-grid">
+      <div class="app-card">Government Institutions</div>
+      <div class="app-card">Telecom Companies</div>
+      <div class="app-card">Industrial Plants</div>
+      <div class="app-card">Commercial Buildings</div>
+    </div>
+  </div>
+</section>
 
   <!-- ================= FOOTER ================= -->
   <footer class="site-footer">
