--- a/frontend/smart-systems.html
+++ b/frontend/smart-systems.html
@@ -17,20 +17,50 @@
 <section class="section">
   <div class="container">
     <h2>Smart Systems & IoT Division</h2>
+    <input type="hidden" name="division" value="Smart Systems & IoT">
 
     <p class="lede">
       Intelligent automation and monitoring systems
       for modern infrastructure.
     </p>
 
-    <h3>Our Capabilities</h3>
-    <ul>
-      <li>Smart home automation</li>
-      <li>Building management systems</li>
-      <li>Sensor-based monitoring</li>
-      <li>Remote control & dashboards</li>
-      <li>Industrial IoT solutions</li>
-    </ul>
+    <h3>Smart & Digital Services</h3>
+
+<div class="apps-grid">
+
+  <div class="app-card">
+    <h4>Smart Home Systems</h4>
+    <p>
+      Intelligent lighting, security, climate control,
+      and automation for residential buildings.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Building Automation</h4>
+    <p>
+      Centralized monitoring and control of
+      electrical, HVAC, and safety systems.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Industrial IoT</h4>
+    <p>
+      Sensor-based monitoring and data collection
+      for factories and industrial plants.
+    </p>
+  </div>
+
+  <div class="app-card">
+    <h4>Remote Monitoring</h4>
+    <p>
+      Dashboards and alerts for real-time
+      system performance and diagnostics.
+    </p>
+  </div>
+
+</div>
 
     <h3>Why Smart Systems?</h3>
     <p>
