Add Digital Driving License system under Digital Systems & AI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -183,15 +183,32 @@
         </p>
       </a>
 
-      <!-- Digital Systems / AI (keep external for now) -->
-      <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-card">
-        <img src="assets/images/app-beki.png" alt="Digital Systems and AI">
-        <h3>Digital Systems & AI</h3>
-        <p>
-          Software platforms, artificial intelligence, data analytics,
-          cybersecurity, and digital transformation for enterprises.
-        </p>
-      </a>
+      <div class="app-card">
+
+  <!-- Main Digital Systems card -->
+  <a href="https://ai-project-977z.vercel.app/" target="_blank" class="division-link">
+    <img src="assets/images/app-beki.png" alt="Digital Systems and AI">
+    <h3>Digital Systems & AI</h3>
+    <p>
+      Enterprise software platforms, artificial intelligence,
+      data analytics, cybersecurity, and national digital systems.
+    </p>
+  </a>
+
+  <!-- Sub digital products -->
+  <div class="sub-cards">
+
+    <a href="digital-driving-license.html" class="sub-card">
+      🚗 Digital Driving License System
+    </a>
+
+    <div class="sub-card coming-soon">
+      🏛 e-Government Services (Coming Soon)
+    </div>
+
+  </div>
+
+</div>
 
     </div>
   </div>
