--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,29 +186,14 @@
       <div class="app-card">
 
   <!-- Main Digital Systems card -->
-  <a href="https://ai-project-977z.vercel.app/" target="_blank" class="division-link">
-    <img src="assets/images/app-beki.png" alt="Digital Systems and AI">
-    <h3>Digital Systems & AI</h3>
-    <p>
-      Enterprise software platforms, artificial intelligence,
-      data analytics, cybersecurity, and national digital systems.
-    </p>
-  </a>
-
-  <!-- Sub digital products -->
-  <div class="sub-cards">
-
-    <a href="digital-driving-license.html" class="sub-card">
-      🚗 Digital Driving License System
-    </a>
-
-    <div class="sub-card coming-soon">
-      🏛 e-Government Services (Coming Soon)
-    </div>
-
-  </div>
-
-</div>
+  <a href="digital-systems.html" class="app-card">
+  <img src="assets/images/app-beki.png" alt="Digital Systems and AI">
+  <h3>Digital Systems & AI</h3>
+  <p>
+    AI platforms, software systems, smart digital services,
+    cybersecurity, and national-scale digital transformation.
+  </p>
+</a>
 
     </div>
   </div>
