Add Digital Systems main page with AI and e-Gov structure

--- a/frontend/digital-driving-license.html
+++ b/frontend/digital-driving-license.html
@@ -95,6 +95,37 @@
         </button>
       </div>
 
+      <!-- STEP 5 -->
+<div class="form-step">
+  <h3>Payment</h3>
+
+  <p>
+    Application fee is required to proceed.
+    Select your payment method below.
+  </p>
+
+  <div class="payment-card">
+    <label class="payment-option">
+      <input type="radio" name="payment" checked>
+      <img src="assets/images/telebirr-logo.png" alt="Telebirr">
+      <span>Telebirr</span>
+    </label>
+
+    <p class="payment-amount">
+      Amount: <strong>ETB 500</strong>
+    </p>
+
+    <p class="payment-note">
+      You will be redirected to Telebirr to complete the payment.
+    </p>
+  </div>
+
+  <button type="button" class="btn btn-outline prev-step">Back</button>
+  <button type="button" class="btn btn-primary">
+    Proceed to Payment
+  </button>
+</div>
+
     </form>
 
   </div>
